# basilar

./: .gitignore  README.md  ligador.cpp  makefile  montador.cpp
samples/0_variaveis_em_arquivos_diferentes/: ligador_vars_1.asm  ligador_vars_1.asm.out  ligador_vars_1.asm.out.debug  ligador_vars_1.e  ligador_vars_1.pre  ligador_vars_2.asm  ligador_vars_2.obj.debug  ligador_vars_2.pre  ligador_vars_ligado.out  ligador_vars_ligado.out.debug  run_sample.sh
samples/1_entrada_e_saida_em_arquivos_diferentes/: ligador_io_1.asm  ligador_io_1.asm.out  ligador_io_1.asm.out.debug  ligador_io_1.pre  ligador_io_2.asm  ligador_io_2.asm.out.debug  ligador_io_2.e  ligador_io_2.pre  ligador_io_ligado_2_depois_1.out  run_sample.sh  (+1 more)
src/: friend_test.hpp
test/: CMakeLists.txt  run_tests.sh  test1.cpp  test2.cpp  test_suite.hpp
test/assemblage/: symbol_table_test.cpp
test/data/: assembly_com_ligacao.asm.out  assembly_com_ligacao.asm.out.debug  assembly_sem_ligacao.asm  assembly_sem_ligacao.asm.out  assembly_sem_ligacao.asm.out.debug
test/flow/: preprocessor_flow_test.cpp
test/flow/data/: commented_line.asm  commented_line.out.asm  equ_line.asm  equ_line.expected.asm  if_line.asm  if_line.expected.asm
test/tokenizer/: formatter_test.cpp  line_reader_test.cpp  preprocessor_test.cpp  tokenizer_test.cpp
test/tokens/: assembler_spec_test.cpp  const_operand_matcher_test.cpp  label_matcher_test.cpp  pre_directive_matcher_test.cpp  preprocessing_spec_test.cpp
test/tokens/parser/: parser_mod_test.cpp  parser_ops_test.cpp  regex_parser_test.cpp  utility_parser_test.cpp
(+121 files in other folders)
